fix sidebar spacing

--- a/style.css
+++ b/style.css
@@ -392,7 +392,6 @@ textarea:focus {
 }
 
 input[type="checkbox"],
-input[type="image"],
 input[type="radio"] {
 	width: auto;
 }
@@ -1526,8 +1525,8 @@ li.comment {
 .sidebar .widget {
 	background-color: #fff;
 	border-radius: 3px;
-	margin-bottom: 20px;
-	margin-bottom: 2rem;
+	margin-bottom: 40px;
+	margin-bottom: 4rem;
 	padding: 20px;
 	padding: 2rem;
 }
